Refactor Asegurados to Insureds and update related components for improved naming consistency
- Renamed Asegurado to Insured across the backend and frontend, including models, services, and controllers.
- Updated database context and migration files to reflect the new naming convention.
- Refactored Angular components and services to use Insured terminology, enhancing clarity and maintainability.
- Adjusted routing and API endpoints to align with the new Insured structure.
- Removed obsolete Asegurado-related files and updated references throughout the application.

--- a/backend/SegurosAPI/appsettings.json
+++ b/backend/SegurosAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=SegurosDB;Username=postgres;Password=1044603501"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=InsuredsDB;Username=postgres;Password=1044603501"
   },
   "Logging": {
     "LogLevel": {
