Update .gitignore, appsettings, and project files; remove README.md
- Modified .gitignore to include additional environment and database files, and removed unnecessary IDE entries.
- Updated appsettings.Development.json to include a connection string for local development.
- Cleared the DefaultConnection in appsettings.json for security reasons.
- Added UserSecretsId to SegurosAPI.csproj for managing sensitive data.
- Removed obsolete README.md file.

--- a/backend/SegurosAPI/SegurosAPI.csproj
+++ b/backend/SegurosAPI/SegurosAPI.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>9fb859c9-b742-4ffc-8ed7-6a84455f8acd</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
