--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# .NET Core
+# .NET
 *.swp
 *.*~
 project.lock.json
@@ -8,10 +8,9 @@ nupkg/
 
 # Visual Studio Code
 .vscode/
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+
+# Rider
+.idea/
 
 # User-specific files
 *.suo
@@ -30,21 +29,58 @@ build/
 bld/
 [Bb]in/
 [Oo]bj/
+[Oo]ut/
 msbuild.log
 msbuild.err
 msbuild.wrn
 
-# Node.js / Angular
-node_modules/
-npm-debug.log
-yarn-error.log
-dist/
-tmp/
-out-tsc/
-.angular/
+# Visual Studio
+.vs/
 
-# IDEs and editors
-.idea/
+# MSTest test Results
+[Tt]est[Rr]esult*/
+[Bb]uild[Ll]og.*
+
+# NUnit
+*.VisualState.xml
+TestResult.xml
+
+# .NET Core
+project.lock.json
+project.fragment.lock.json
+artifacts/
+
+# ASP.NET Scaffolding
+ScaffoldingReadMe.txt
+
+# User Secrets (local development)
+**/appsettings.local.json
+**/secrets.json
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# Database
+*.db
+*.db-shm
+*.db-wal
+
+# Node.js (para frontend)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnp/
+.pnp.js
+
+# Angular
+/frontend/seguros-app/dist/
+/frontend/seguros-app/.angular/
+/frontend/seguros-app/tmp/
+
+# IDEs
 *.swp
 *.swo
 *~
@@ -55,20 +91,9 @@ out-tsc/
 .settings/
 *.sublime-workspace
 
-# System Files
-.DS_Store
+# OS
 Thumbs.db
-
-# Environment files
-*.env
-*.env.local
-*.env.*.local
-
-# Database
-*.db
-*.sqlite
-*.sqlite3
-
-# Logs
-logs/
-*.log
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+.DS_Store
